--- a/_sass/oneflow/_footer.scss
+++ b/_sass/oneflow/_footer.scss
@@ -101,7 +101,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: $primary-color;
+  background: $background-color;
   font-size: 24px;
   line-height: 50px;
   text-align: center;
