--- a/_sass/oneflow/skins/_aqua.scss
+++ b/_sass/oneflow/skins/_aqua.scss
@@ -3,24 +3,26 @@
    ========================================================================== */
 
 /* Colors */
-$gray                       : #1976d2 !default;
+$gray                       : #808080 !default;
 $dark-gray                  : mix(#000, $gray, 40%) !default;
 $darker-gray                : mix(#000, $gray, 60%) !default;
 $light-gray                 : mix(#fff, $gray, 50%) !default;
 $lighter-gray               : mix(#fff, $gray, 90%) !default;
 
 $body-color                 : #fff !default;
-$background-color           : #f0fff0 !default;
+$background-color           : #1D2B3F !default;
 $code-background-color      : $lighter-gray !default;
 $code-background-color-dark : $light-gray !default;
-$text-color                 : $dark-gray !default;
+$text-color                 : $lighter-gray  !default;
 $border-color               : $lighter-gray !default;
 
-$primary-color              : $gray !default;
+$primary-color              : #d86d02  !default;
 $success-color              : #27ae60 !default;
 $warning-color              : #e67e22 !default;
 $danger-color               : #c0392b !default;
 $info-color                 : #03a9f4 !default;
+
+$footer-background-color    : $primary-color !default;
 
 /* links */
 $link-color                 : #393e46 !default;
