--- a/_includes/page__hero.html
+++ b/_includes/page__hero.html
@@ -19,7 +19,7 @@
 {% assign image_description = image_description | markdownify | strip_html | strip_newlines | escape_once %}
 
 <div class="page__hero{% if page.header.overlay_color or page.header.overlay_image %}--overlay{% endif %}"
-     style="{% if page.header.overlay_color %}background-color: {{ page.header.overlay_color | default: 'transparent' }};{% endif %} {% if overlay_img_path %}background-image: {% if overlay_filter %}{{ overlay_filter }}, {% endif %}url('{{ overlay_img_path }}');{% endif %}; min-height: 100vh; background-size: cover; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+     style="{% if page.header.overlay_color %}background-color: {{ page.header.overlay_color | default: 'transparent' }};{% endif %} {% if overlay_img_path %}background-image: {% if overlay_filter %}{{ overlay_filter }}, {% endif %}url('{{ overlay_img_path }}');{% endif %}; min-height: 70vh; background-size: cover; display: flex; flex-direction: column; justify-content: center; align-items: center;">
   {% if page.header.overlay_color or page.header.overlay_image %}
     <div class="wrapper">
       <h1 id="page-title" class="page__title" itemprop="headline">
@@ -32,7 +32,11 @@
       <div style="text-align: center">
         <p>
         {% for action in page.header.actions %}
+          {% if action.label == "Let's talk" %}
+          <a href="#contact" class="btn btn--primary-outline btn--large" style="margin-right: 1rem;">Let's talk</a>
+          {% else %}
           <a href="{{ action.url | relative_url }}" class="btn btn--light-outline btn--large" {% if action.blank %} target="_blank" rel="noopener noreferrer nofollow"{% endif %}>{{ action.label | default: site.data.ui-text[site.locale].more_label | default: "Learn More" }}</a>
+          {% endif %}
         {% endfor %}
       </div>
       {% endif %}
