--- a/_includes/popup.html
+++ b/_includes/popup.html
@@ -1,23 +1,19 @@
 <div id="cookie-banner">
-    This website is made available via GitHub Pages, which means it uses a global distribution network (CDN) to reliably display content. When you use the website, some of your non-personal data, such as IP address and page usage information, may be transmitted over this network to ensure the proper functioning of the website.
-    You can find more information in the
+    <strong>Information on the Use of GitHub Pages</strong><br>
+    This website is hosted via GitHub Pages and uses a global content delivery network (CDN). When using the site, some non-personal data (e.g., your IP address and basic usage data) may be transmitted via this network. This is required for the site to properly function. More information is available in the
     <a href="/imprint#github-pages-und-cdn-nutzung"
        target="_blank" rel="noopener noreferrer nofollow">
-        imprint</a><br><br>
+        imprint</a>.<br><br>
 
+    <strong>Essential Cookie</strong><br>
+    We use one essential cookie to store your preference regarding data handling on this website. This cookie is necessary for the cookie banner to function and is stored for 24 hours. It contains no personal data.<br><br>
 
-    Please confirm that you agree to this and that we use a consent cookie that is stored for a period of one day. This cookie enables us to save your consent to the use of non-personal data and the proper functioning of the website.<br><br>
+    Please confirm that you have read and understood this information. This confirmation only refers to the essential cookie and GitHub Pages and does not constitute consent to any additional cookies or personal data processing.<br>
+    No other cookies are used on this website.<br><br>
 
-    <small>For information in german, refer to the
-        <a href="/imprint"
-           target="_blank" rel="noopener noreferrer nofollow">
-            imprint</a>
-    </small>
-
-    <br><br>
-
-    <button class="btn btn--warning" id="cookie-consent-btn">Agree</button>
+    <button class="btn btn--warning" id="cookie-consent-btn">Acknowledge</button>
 </div>
+
 
 
 
