start adding personal brand

--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -109,3 +109,13 @@
         width: 100%;
     }
 }
+
+
+
+
+.video-row {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 2rem;
+}
+
