--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,12 @@
 <!-- start custom footer snippets -->
 
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>
+    AOS.init({
+        duration: 700, // animation duration in ms
+        once: true     // animate only once per element
+    });
+</script>
+
+
 <!-- end custom footer snippets -->
