--- a/_sass/oneflow/skins/_aqua.scss
+++ b/_sass/oneflow/skins/_aqua.scss
@@ -10,7 +10,7 @@ $light-gray                 : mix(#fff, $gray, 50%) !default;
 $lighter-gray               : mix(#fff, $gray, 90%) !default;
 
 $body-color                 : #fff !default;
-$background-color           : #1D2B3F !default;
+$background-color           : black !default;
 $code-background-color      : $lighter-gray !default;
 $code-background-color-dark : $light-gray !default;
 $text-color                 : $lighter-gray  !default;
@@ -20,7 +20,7 @@ $primary-color              : #d86d02  !default;
 $success-color              : #27ae60 !default;
 $warning-color              : #e67e22 !default;
 $danger-color               : #c0392b !default;
-$info-color                 : #03a9f4 !default;
+$info-color                 : #1D2B3F !default;
 
 $footer-background-color    : $primary-color !default;
 
