--- a/_sass/oneflow/skins/_aqua.scss
+++ b/_sass/oneflow/skins/_aqua.scss
@@ -22,7 +22,7 @@ $warning-color              : #e67e22 !default;
 $danger-color               : #c0392b !default;
 $info-color                 : #1D2B3F !default;
 
-$footer-background-color    : $primary-color !default;
+$footer-background-color    : $info-color !default;
 
 /* links */
 $link-color                 : #393e46 !default;
