--- a/_sass/oneflow/_masthead.scss
+++ b/_sass/oneflow/_masthead.scss
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: $info-color;
+  background-color: black;
 
   border-bottom: 1px solid $border-color;
   -webkit-animation: $intro-transition;
