--- a/_sass/oneflow/_navigation.scss
+++ b/_sass/oneflow/_navigation.scss
@@ -16,7 +16,7 @@
   -ms-flex-align: center;
   align-items: center;
   min-height: $nav-height;
-  background: $info-color;
+  background-color: black;
 
   a {
     display: block;
