--- a/_sass/oneflow/skins/_aqua.scss
+++ b/_sass/oneflow/skins/_aqua.scss
@@ -28,7 +28,7 @@ $footer-background-color    : $info-color !default;
 $link-color                 : #393e46 !default;
 $link-color-hover           : mix(#000, $link-color, 25%) !default;
 $link-color-visited         : mix(#fff, $link-color, 25%) !default;
-$masthead-link-color        : $primary-color !default;
+$masthead-link-color        : #fff !default;
 $masthead-link-color-hover  : mix(#000, $primary-color, 25%) !default;
 
 /* notices */
