--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -9,4 +9,15 @@
 </script>
 
 
+<script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
+<script>
+    const lightbox = GLightbox({
+        selector: 'a[data-lightbox]',
+        touchNavigation: true,
+        autoplayVideos: true,
+    });
+</script>
+
+
+
 <!-- end custom footer snippets -->
