--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -11,4 +11,7 @@
 <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
+
+
 <!-- end custom head snippets -->
