--- a/_sass/oneflow/_footer.scss
+++ b/_sass/oneflow/_footer.scss
@@ -101,14 +101,15 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: $background-color;
+  background: $primary-color;
   font-size: 24px;
   line-height: 50px;
   text-align: center;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease, transform 0.3s ease;
 
   &:hover {
     background: $link-color;
+    transform: translateY(-3px);
   }
 }
 
