--- a/_sass/oneflow/_sections.scss
+++ b/_sass/oneflow/_sections.scss
@@ -1,12 +1,5 @@
 .section-sep {
-    border: 4px solid;
-    border-image: linear-gradient(to right, $link-color, $primary-color, $link-color) 1;
-    width: 100vw;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
+    border: 1px solid transparent;
 }
 
 section.site-section {
