--- a/_sass/oneflow/skins/_aqua.scss
+++ b/_sass/oneflow/skins/_aqua.scss
@@ -20,7 +20,7 @@ $primary-color              : #d86d02  !default;
 $success-color              : #27ae60 !default;
 $warning-color              : #e67e22 !default;
 $danger-color               : #c0392b !default;
-$info-color                 : #1D2B3F !default;
+$info-color                 : #011422  !default;
 
 $footer-background-color    : $info-color !default;
 
