locally host libraries

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,10 +8,8 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 <link rel="manifest" href="/site.webmanifest" />
 
-<link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-
-
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
+<link href="/assets/libraries/aos.css" rel="stylesheet">
+<link rel="stylesheet" href="/assets/libraries/glightbox.min.css"/>
 
 
 <!-- end custom head snippets -->
