--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,6 +1,6 @@
 <!-- start custom footer snippets -->
 
-<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script src="/assets/libraries/aos.js"></script>
 <script>
     AOS.init({
         duration: 700, // animation duration in ms
@@ -9,7 +9,7 @@
 </script>
 
 
-<script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
+<script src="/assets/libraries/glightbox.min.js"></script>
 <script>
     const lightbox = GLightbox({
         selector: 'a[data-lightbox]',
