fix double lightbox

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -12,7 +12,7 @@
 <script src="/assets/libraries/glightbox.min.js"></script>
 <script>
     const lightbox = GLightbox({
-        selector: 'a[data-lightbox]',
+        selector: 'a[data-gallery]',
         touchNavigation: true,
         autoplayVideos: true,
     });
