--- a/_includes/page__hero.html
+++ b/_includes/page__hero.html
@@ -18,22 +18,19 @@
 
 {% assign image_description = image_description | markdownify | strip_html | strip_newlines | escape_once %}
 
-<div class="page__hero{% if page.header.overlay_color or page.header.overlay_image %}--overlay{% endif %}"
-     style="{% if page.header.overlay_color %}background-color: {{ page.header.overlay_color | default: 'transparent' }};{% endif %} {% if overlay_img_path %}background-image: {% if overlay_filter %}{{ overlay_filter }}, {% endif %}url('{{ overlay_img_path }}');{% endif %}; min-height: 75vh; background-size: cover; display: flex; flex-direction: column; justify-content: center; align-items: center; background-attachment: fixed;">
+<div class="page__hero{% if page.header.overlay_color or page.header.overlay_image %}--overlay{% endif %}">
   {% if page.header.overlay_color or page.header.overlay_image %}
     <div class="wrapper">
-      <h1 id="page-title" class="page__title" itemprop="headline">
-          {{ page.title | default: site.title | markdownify | remove: "<p>" | remove: "</p>" }}
-      </h1>
+      <img src="/assets/images/create-a-vision-logo-lang.webp" alt="Logo" class="page__hero-logo" data-aos="fade-right" data-aos-duration="1500">
       {% if page.header.show_overlay_excerpt != false and page.excerpt %}
-        <p class="page__lead">{{ page.excerpt | markdownify | remove: "<p>" | remove: "</p>" }}</p>
+        <p class="page__lead" data-aos="fade-left" data-aos-duration="1500">{{ page.excerpt | markdownify | remove: "<p>" | remove: "</p>" }}</p>
       {% endif %}
       {% if page.header.actions %}
-      <div style="text-align: center">
+      <div style="margin-top: 2rem;" data-aos="fade-up" data-aos-duration="1500">
         <p>
         {% for action in page.header.actions %}
           {% if action.label == "Let's talk" %}
-          <a href="#contact" class="btn btn--primary-outline btn--large" style="padding-right: 3rem; padding-left: 3rem;">Let's talk</a>
+          <a href="#contact" class="btn btn--primary btn--large">call buchen</a>
           {% else %}
           <a href="{{ action.url | relative_url }}" class="btn btn--light-outline btn--large" {% if action.blank %} target="_blank" rel="noopener noreferrer nofollow"{% endif %}>{{ action.label | default: site.data.ui-text[site.locale].more_label | default: "Learn More" }}</a>
           {% endif %}
