--- a/_sass/oneflow/_footer.scss
+++ b/_sass/oneflow/_footer.scss
@@ -101,19 +101,23 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: $background-color;
+  background: $primary-color;
   font-size: 24px;
   line-height: 50px;
   text-align: center;
   transition: background-color 0.3s ease;
 
   &:hover {
-    background: $link-color;
+    background: $background-color;
+
+    .footer-icon {
+      color: $primary-color !important;
+    }
   }
 }
 
 .footer-icon {
-  color: $footer-background-color !important;
+  color: $background-color !important;
   position: absolute;
   top: 50%;
   left: 50%;
