--- a/_sass/oneflow/skins/_aqua.scss
+++ b/_sass/oneflow/skins/_aqua.scss
@@ -6,30 +6,30 @@
 $gray                       : #808080 !default;
 $dark-gray                  : mix(#000, $gray, 40%) !default;
 $darker-gray                : mix(#000, $gray, 60%) !default;
-$light-gray                 : mix(#fff, $gray, 50%) !default;
+$light-gray                 : #E3E2DE !default;
 $lighter-gray               : mix(#fff, $gray, 90%) !default;
 
-$body-color                 : #fff !default;
-$background-color           : black !default;
+$body-color                 : #FFFFFF !default;
+$background-color           : #1B264F !default;
 $code-background-color      : $lighter-gray !default;
 $code-background-color-dark : $light-gray !default;
-$text-color                 : $lighter-gray  !default;
+$text-color                 : #E3E2DE  !default;
 $border-color               : $lighter-gray !default;
 
-$primary-color              : #d86d02  !default;
+$primary-color              : #FFE070  !default;
 $success-color              : #27ae60 !default;
 $warning-color              : #e67e22 !default;
 $danger-color               : #c0392b !default;
-$info-color                 : #1D2B3F !default;
+$info-color                 : #1B264F !default;
 
-$footer-background-color    : $info-color !default;
+$footer-background-color    : #2b375f !default;
 
 /* links */
-$link-color                 : #393e46 !default;
+$link-color                 : #FFE070 !default;
 $link-color-hover           : mix(#000, $link-color, 25%) !default;
 $link-color-visited         : mix(#fff, $link-color, 25%) !default;
-$masthead-link-color        : #fff !default;
-$masthead-link-color-hover  : mix(#000, $primary-color, 25%) !default;
+$masthead-link-color        : #FFFFFF !default;
+$masthead-link-color-hover  : #FFE070 !default;
 
 /* notices */
 $notice-background-mix: 90% !default;
