--- a/_includes/popup.html
+++ b/_includes/popup.html
@@ -1,17 +1,17 @@
 <div id="cookie-banner">
-    <strong>Information on the Use of GitHub Pages</strong><br>
-    This website is hosted via GitHub Pages and uses a global content delivery network (CDN). When using the site, some non-personal data (e.g., your IP address and basic usage data) may be transmitted via this network. This is required for the site to properly function. More information is available in the
-    <a href="/imprint#github-pages-und-cdn-nutzung"
+    <strong>Informationen zur CDN-Nutzung</strong><br>
+    Diese Webseite nutzt ein globales Content Delivery Network (CDN). Bei der Nutzung der Seite können nicht-personenbezogene Daten (z.B. deine IP-Adresse und grundlegende Nutzungsdaten) über dieses Netzwerk übertragen werden. Dies ist für die korrekte Funktion der Webseite notwendig. Weitere Informationen findest du im
+    <a href="/imprint#cdn-nutzung"
        target="_blank" rel="noopener noreferrer nofollow">
-        imprint</a>.<br><br>
+        Impressum</a>.<br><br>
 
-    <strong>Essential Cookie</strong><br>
-    We use one essential cookie to store your preference regarding data handling on this website. This cookie is necessary for the cookie banner to function and is stored for 24 hours. It contains no personal data.<br><br>
+    <strong>Essentieller Cookie</strong><br>
+    Wir verwenden einen essentiellen Cookie, um deine Präferenz bezüglich der Datenverarbeitung auf dieser Webseite zu speichern. Dieser Cookie ist für die Funktion des Cookie-Banners notwendig und wird für 24 Stunden gespeichert. Er enthält keine persönlichen Daten.<br><br>
 
-    Please confirm that you have read and understood this information. This confirmation only refers to the essential cookie and GitHub Pages and does not constitute consent to any additional cookies or personal data processing.<br>
-    No other cookies are used on this website.<br><br>
+    Bitte bestätige, dass du diese Informationen gelesen und verstanden hast. Diese Bestätigung bezieht sich nur auf den essentiellen Cookie und die CDN-Nutzung und stellt keine Zustimmung zu zusätzlichen Cookies oder der Verarbeitung persönlicher Daten dar.<br>
+    Es werden keine weiteren Cookies auf dieser Webseite verwendet.<br><br>
 
-    <button class="btn btn--warning" id="cookie-consent-btn">Acknowledge</button>
+    <button class="btn btn--warning" id="cookie-consent-btn">Verstanden</button>
 </div>
 
 
