Update imprint and cookie banner for Calendly integration and formatting

--- a/_includes/popup.html
+++ b/_includes/popup.html
@@ -1,16 +1,14 @@
 <div id="cookie-banner">
     <strong>Informationen zur CDN-Nutzung</strong><br>
-    Diese Webseite nutzt ein globales Content Delivery Network (CDN). Bei der Nutzung der Seite können nicht-personenbezogene Daten (z.B. deine IP-Adresse und grundlegende Nutzungsdaten) über dieses Netzwerk übertragen werden. Dies ist für die korrekte Funktion der Webseite notwendig. Weitere Informationen findest du im
-    <a href="/imprint#cdn-nutzung"
-       target="_blank" rel="noopener noreferrer nofollow">
-        Impressum</a>.<br><br>
-
+    Diese Webseite nutzt ein globales Content Delivery Network (CDN). Bei der Nutzung der Seite können nicht-personenbezogene Daten (z.B. deine IP-Adresse) über dieses Netzwerk übertragen werden. Dies ist für die korrekte Funktion der Webseite notwendig.
+    <br><br>
     <strong>Essentieller Cookie</strong><br>
-    Wir verwenden einen essentiellen Cookie, um deine Präferenz bezüglich der Datenverarbeitung auf dieser Webseite zu speichern. Dieser Cookie ist für die Funktion des Cookie-Banners notwendig und wird für 24 Stunden gespeichert. Er enthält keine persönlichen Daten.<br><br>
-
-    Bitte bestätige, dass du diese Informationen gelesen und verstanden hast. Diese Bestätigung bezieht sich nur auf den essentiellen Cookie und die CDN-Nutzung und stellt keine Zustimmung zu zusätzlichen Cookies oder der Verarbeitung persönlicher Daten dar.<br>
-    Es werden keine weiteren Cookies auf dieser Webseite verwendet.<br><br>
-
+    Wir verwenden einen essentiellen Cookie, um deine Präferenz bezüglich der Datenverarbeitung auf dieser Webseite zu speichern. Dieser Cookie ist für die Funktion des Cookie-Banners notwendig und wird für 24 Stunden gespeichert. Er enthält keine persönlichen Daten.
+    <br><br>
+    <strong>Calendly:</strong> Wenn du einen Termin über Calendly buchst, können Cookies von Calendly gesetzt werden. Calendly zeigt dir einen separaten Cookie-Banner an.
+    <br><br>
+    Bitte bestätige, dass du diese Informationen gelesen und verstanden hast. Es werden keine weiteren Cookies auf dieser Webseite verwendet.
+    <br><br>
     <button class="btn btn--warning" id="cookie-consent-btn">Verstanden</button>
 </div>
 
