--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -3,8 +3,9 @@
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>
     AOS.init({
-        duration: 700, // animation duration in ms
-        once: true     // animate only once per element
+        duration: 700,
+        offset: -300,
+        once: true
     });
 </script>
 
